--- a/html입력창 연습.html
+++ b/html입력창 연습.html
@@ -5,16 +5,21 @@
         <title></h1>숀</title>
     </head>
     <body>
-        텍스트 <input type="text">
+
+        <h1>입력양식</h1>
+        <p>텍스트 <input type="text"></p>
         체크박스 <input type="checkbox"/>
         체크 <input type="radio"/>
         색깔 <input type="color"/>
-        여러 문장 <textarea></textarea>
+        <P>여러 문장 <textarea></textarea></P>
         드랍다운 <select name="name">
-    <option value="워니">워니</option>
+    <option value="제니">워니</option>
+    <option value="제니">제니</option>
+    <option value="제니">칼리</option>
     <option value="제니">제니</option>
 </select>
 <form>
+<input type="text" placeholder="hk416"/>
 <input type="email" placeholder="이메일"/>
 <input type="password" placeholder="비밀번호"/>
 <button type="submit">로그인</button>
