--- a/divstudy.html
+++ b/divstudy.html
@@ -3,28 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title></h1>div연습</title>
-
-        <style type="text/css">
-            div#s_left {
-            width:200px;
-            height: 700px;
-            background-color: yellow;
-            float:left;
-            }
-            #contents{
-                width: 400px;
-                height: 700px;
-                background-color: green;
-                float: left;
-            }
-            #s_right{
-                width: 200px;
-                height: 700px;
-                background-color: red;
-                float:left
-            }
-
-        </style>
+        <link href = "divstudy.css" rel="stylesheet" type="text/css" >
     </head>
     <body>
         <div id="s_left">사이드바왼쪽</div>
