--- a/div연습2.html
+++ b/div연습2.html
@@ -9,17 +9,19 @@
 
     <body>
       <div id="wrap">
-        <div id="header">
+        <div id="header">맨위
         </div>
 
         <div id="main">  
-            <div id="left_main">
+            <div id="left_main"><div style="color: chartreuse;">왼쪽</div> 
             </div>
-            <div id="right_main">
+            <div id="right_main"><div style="color: blue;">오른쪽</div> 
             </div>
         </div>
+
         <div style="clear: both;"></div>
-        <div id="footer">
+        
+        <div id="footer">아래쪽
         </div>
 
       </div>
