--- a/연습.html
+++ b/연습.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/7b3294b62f.js"></script>
     <link rel="stylesheet" href="연습.css">
     <title>연습</title>
 </head>
@@ -10,17 +11,24 @@
    
 
         <div class="menu">
-            <label><img class="logo" src="kindpng_238136.png"></label>
-        <ul>
             
-            <li><a href="">home</a></li>
-            <li><a href="">home</a></li>
-            <li><a href="">home</a></li>
-            <li><a href="">home</a></li>
-            <li><a href="">home</a></li>
+            <input type="checkbox" id="check">
+
+            <label for="check" class="checkbtn">
+            <i class="fas fa-bars"></i>
+            </label>
+
+            <label><img class="logo" src="kindpng_238136.png"></label>
+
+        <ul>
+            <li><a class="active" href="#">home</a></li>
+            <li><a href="#">home</a></li>
+            <li><a href="#">home</a></li>
+            <li><a href="#">home</a></li>
+            <li><a href="#">home</a></li>
         </ul>
 
-        
+        <section></section>
 
     </div>
 </body>
