--- a/슬라이드스크롤연습.html
+++ b/슬라이드스크롤연습.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
 
-    <div class="num1"></div>
+    <div class="num1">d</div>
     <div class="num2"></div>
     <div class="num3"></div>
     <div class="num4"></div>
