--- a/슬라이드스크롤연습.html
+++ b/슬라이드스크롤연습.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="슬라이드스크롤연습.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+   <script>
+    
+ $(window).scroll(function(){ 
+
+    var height = $(document).scrollTop(); //실시간으로 스크롤의 높이를 측정
+     
+    if(height > 0){ 
+      $('.menu').addClass('fixmenu'); 
+    }else if(height == 0){ 
+      $('.menu').removeClass('fixmenu'); 
+    } 
+  });
+</script>
+
     <title>Document</title>
 </head>
 <body>
@@ -16,9 +31,16 @@
         </ul>
     </div>
 
-    <div class="num1">d</div>
+    <div class="num1">dd</div>
     <div class="num2"></div>
     <div class="num3"></div>
     <div class="num4"></div>
+
+
+
+
 </body>
+
+
+
 </html>
