--- a/슬라이드스크롤연습.html
+++ b/슬라이드스크롤연습.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
    <script>
     
- $(window).scroll(function(){ 
+    $(window).scroll(function(){ 
 
     var height = $(document).scrollTop(); //실시간으로 스크롤의 높이를 측정
      
@@ -22,6 +22,7 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="header">
     <div class="menu">
         <ul>
             <li><a href="">one</a></li>
@@ -30,12 +31,13 @@
             <li><a href="">four</a></li>
         </ul>
     </div>
+  </div>
 
-    <div class="num1">dd</div>
+    <div class="num1"></div>
     <div class="num2"></div>
     <div class="num3"></div>
     <div class="num4"></div>
-
+  
 
 
 
